--- a/src/stories/page.css
+++ b/src/stories/page.css
@@ -1,5 +1,8 @@
 section {
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Fira Code', monospace;
+  font-family: 'CARTOON FREE', sans-serif;
+  font-family: 'JetBrains Mono', monospace;
+                                     
   font-size: 14px;
   line-height: 24px;
   padding: 48px 20px;
@@ -9,6 +12,9 @@ section {
 }
 
 section h2 {
+  font-family: 'Style Script', cursive;
+  font-family: 'JetBrains Mono', monospace;
+
   font-weight: 900;
   font-size: 32px;
   line-height: 1;
